--- a/css/styles.css
+++ b/css/styles.css
@@ -178,17 +178,16 @@ button {
 @media (max-width: 700px) {
 
 
-  body {
-      margin-top: 55px;
-   }
+body {
+
+  height: 130vh;
+
 }
 
 
-@media (max-width: 1050px) {
+  li, ol, ul {
+    padding: 0em;
 
-  body {
-     padding: 1.5em;
-   }
-
+  }
 
 }
