--- a/css/styles.css
+++ b/css/styles.css
@@ -178,16 +178,126 @@ button {
 @media (max-width: 700px) {
 
 
-body {
-
-  height: 130vh;
-
-}
-
+  body {
+    justify-content: space-evenly;
+    flex-direction: column;
+    display: row;
+  }
 
   li, ol, ul {
-    padding: 0em;
-
+    padding: 0.2em;
+    display: inline-block;
   }
+
+
+
+  h2 {
+    margin: 0;
+    text-transform: uppercase;
+    font-family: 'Open Sans', sans-serif;
+    font-size: var(--font-size-large);
+  }
+
+  button {
+    margin: 6px;
+    border: 1px solid transparent;
+    padding: .5rem 1rem;
+    color: var(--color-keys);
+    font-size: var(--font-size-medium);
+    background-color: var(--color-keys-light);
+    border-radius: 5px;
+    -webkit-transition: var(--transition);
+    -o-transition: var(--transition);
+    transition: var(--transition);
+    cursor: pointer;
+  }
+
+  .main-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 50%;
+    max-height: 900px;
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  .section {
+    width: 100%;
+    padding: 10px;
+  }
+
+  /* Title */
+
+  .header {
+    color: var(--color-start);
+    margin-top: 1em;
+  }
+
+  /* Phrase */
+
+  .letter {
+    font-size: var(--font-size-medium);
+    height: 65px;
+    font-family: Roboto;
+    width: 65px;
+    padding: 20px 1px 0 1px;
+    margin-right: 10px;
+    margin-bottom: 1em;
+    color: transparent;
+    background: var(--color-neutral-light);
+    border-radius: 5px;
+  }
+
+  .space {
+    width: 15px;
+  }
+
+  .show {
+    transform: rotate(360deg);
+    color: #000;
+    background-color: #76CE82;
+    transition: .8s cubic-bezier(.6, 1.5, .6, 1);
+  }
+
+  /* Keyboard */
+
+  .keyrow {
+    display: flex;
+    justify-content: center;
+  }
+
+  .chosen {
+    background: var(--color-neutral);
+    border-radius: 5px;
+    font-size: var(--font-size-medium);
+    color: #FFFFFF;
+    cursor: default;
+  }
+
+  .btn__reset {
+    padding: 8px;
+    margin: 50px auto;
+    background: #FFFFFF;
+    border-radius: 5px;
+    font-size: var(--font-size-medium);
+    cursor: pointer;
+  }
+
+  /* Overlay */
+
+  #overlay {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    color: #FFFFFF;
+    justify-content: center;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    border-radius: 5px;
+  }
+
 
 }
