--- a/css/styles.css
+++ b/css/styles.css
@@ -221,6 +221,7 @@ text-transform: uppercase;
     flex-direction: column;
     justify-content: space-around;
     height: 50%;
+    margin-top: 180px;
     max-height: 900px;
     margin: 0 auto;
     text-align: center;
