--- a/css/styles.css
+++ b/css/styles.css
@@ -182,6 +182,8 @@ button {
     justify-content: space-evenly;
     flex-direction: column;
     display: row;
+    min-width: 50%;
+    margin-top: 150px;
   }
 
   li, ol, ul {
@@ -329,4 +331,5 @@ text-transform: uppercase;
 
 
 }
+
 
