--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-
 /* Main styles */
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&Roboto:300');
 
@@ -180,9 +179,10 @@ button {
 
 
   body {
-    justify-content: space-evenly;
+    justify-content:center;
     flex-direction: column;
     display: row;
+    margin-top:50%;
     min-width: 50%;
     margin-top: 200px;
   }
