--- a/css/styles.css
+++ b/css/styles.css
@@ -196,6 +196,7 @@ button {
 
   h2 {
 text-transform: uppercase;
+margin-top: 75%;
     font-family: 'Roboto', sans-serif;
     font-size: 30px;
     animation: bounceIn 3s;
